; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_runtime_file.c_runtime_log_get_runtime_str.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_runtime_file.c_runtime_log_get_runtime_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"%s %02u:%02u:%02u\00", align 1
@MENU_ENUM_LABEL_VALUE_PLAYLIST_SUBLABEL_RUNTIME = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"%s 00:00:00\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @runtime_log_get_runtime_str(%struct.TYPE_5__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = icmp ne %struct.TYPE_5__* %8, null
  br i1 %9, label %10, label %28

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i32, i32* @MENU_ENUM_LABEL_VALUE_PLAYLIST_SUBLABEL_RUNTIME, align 4
  %14 = call i8* @msg_hash_to_str(i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = call i32 (i8*, i64, i8*, i8*, ...) @snprintf(i8* %11, i64 %12, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %14, i32 %18, i32 %22, i32 %26)
  store i32 %27, i32* %7, align 4
  br label %34

28:                                               ; preds = %3
  %29 = load i8*, i8** %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = load i32, i32* @MENU_ENUM_LABEL_VALUE_PLAYLIST_SUBLABEL_RUNTIME, align 4
  %32 = call i8* @msg_hash_to_str(i32 %31)
  %33 = call i32 (i8*, i64, i8*, i8*, ...) @snprintf(i8* %29, i64 %30, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* %32)
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %28, %10
  %35 = load i32, i32* %7, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %40, label %37

37:                                               ; preds = %34
  %38 = load i32, i32* %7, align 4
  %39 = icmp sge i32 %38, 64
  br i1 %39, label %40, label %41

40:                                               ; preds = %37, %34
  store i32 0, i32* %7, align 4
  br label %41

41:                                               ; preds = %40, %37
  ret void
}

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*, ...) #1

declare dso_local i8* @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
